--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "url": "https://github.com/olivermulari/openapi-response-mocker/issues"
   },
   "homepage": "https://github.com/olivermulari/openapi-response-mocker#readme",
+  "dependencies": {
+    "swagger-client": "^3.18.5"
+  },
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -39,7 +42,6 @@
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.49.2",
     "openapi-types": "^12.1.0",
-    "swagger-client": "^3.18.5",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
